# spawn-binding

./: .clang-format  .gitignore  CMakeLists.txt  MAINTAINERS  README.md  manifest.yml.in  spawn.pc.in
conf.d/cmake/: 00-debian-config.cmake  00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/packaging/deb/: agl-service-modbus.dsc  debian.agl-service-modbus-bin.install  debian.agl-service-modbus-plugin-kingpigeon.install  debian.agl-service-modbus-plugin-raymarine-anemometer.install  debian.changelog  debian.control  debian.rules
conf.d/packaging/rpm/: modbus-binding.service  morbus-binding.spec
conf.d/project/etc/: CMakeLists.txt  control-spawn_demo-config.json  spawn-basic-config.json  spawn-minimal-config.json  spawn-nspace-config.json  spawn-sample-simple.json  spawn-sandbox-config.json  spawn-simple-config.json  wireguard-autostart.json
conf.d/wgt/: manifest.yml.in
docs/: 1-architecture_presentation.md  2-installation_guide.md  3-configuration.md  4-running_and_testing.md  api-services-book.yml
etc/: spawn-nspace-config.json  spawn-simple-config.json
scripts/: wireguard-autoconfig.sh
src/: CMakeLists.txt  ctl-compat.h  ctl-lib-plugin.h  ctl-lib.c  ctl-lib.h  ctlplug.h  curl-utils.c  curl-utils.h  spawn-binding.c  spawn-binding.h  spawn-childexec.c  spawn-config.c  spawn-config.h  spawn-defaults.c  spawn-defaults.h  spawn-encoders-plugins.h  spawn-encoders.c  spawn-encoders.h  spawn-enums.c  spawn-enums.h  spawn-expand-defs.c  spawn-expand-defs.h  spawn-expand.c  spawn-expand.h  spawn-sandbox.c  spawn-sandbox.h  spawn-subtask-internal.h  spawn-subtask.c  spawn-subtask.h  spawn-utils.c  spawn-utils.h
src/lib/: jsonc-buf.c  jsonc-buf.h  line-buf.c  line-buf.h  stream-buf.c  stream-buf.h  vfmt.c  vfmt.h
src/plugins/: LICENCE  encoder-sample.c
src/plugins/spawn-encoder-demo/: CMakeLists.txt  encoder-sample.c  shelldemo-formater.c
test/: test-all.sh
test/test-basic/: CAUTION  test-basic.client.reference  test-basic.json  test-basic.sh
test/test-ctl/: test-ctl-plug.c  test-ctl.client.reference  test-ctl.json  test-ctl.sh
test/test-encoders/: test-encoders.binder.reference  test-encoders.client.reference  test-encoders.json  test-encoders.sh
test/test-info/: test-info.client.reference  test-info.sh
test/test-timeout/: test-timeout.client.reference  test-timeout.json  test-timeout.sh
